--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,9 @@
         }
     ],
     "require": {
-        "php": "^7.2|^8.0",
-        "illuminate/database": "^6.0|^7.0|^8.0",
-        "illuminate/support": "^6.0|^7.0|^8.0"
+        "php": "^7.2|^8.2"
     },
-    "require-dev": {
-        "mockery/mockery": "^1.4.2",
-        "phpunit/phpunit": "^8.5",
+    "require-dev": {       
         "reedware/laravel-relation-joins": "^1.0.6"
     },
     "autoload": {
