--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": "^7.2|^8.2"
+        "php": "^7.2|^8.1|^8.2"
     },
     "require-dev": {       
         "reedware/laravel-relation-joins": "^1.0.6"
